# ogts

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: child.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/model/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
frontend/assets/: style.scss
frontend/js/: child.js
frontend/src/: about.rs  app.rs  main.rs  service.rs
frontend/src/pages/: child.rs  index.rs  mod.rs
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/src/: main.rs
