[package]
name = "ogts-frontend"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
log = "0.4"
js-sys = "0.3"
patternfly-yew = { version = "0.4.1", features = ["icons-fab"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2"
yew-more-hooks = "0.1.0"
yew-nested-router = "0.2"

ogts-common = { path = "../common" }

[dependencies.tauri-sys]
version = "*"
#git = "https://github.com/JonasKruckenberg/tauri-sys"
#rev = "904450cffe9687fdd4c5163077550edffa650a68"
path = "../../tauri-sys"
features = [
    "shell"
]

[patch.crates-io]
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "45bbff65c5afdc5429b610f49a68056fcb633832" } # FIXME: awaiting release