[package]
name = "ogts"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tauri-plugin-window-state = "0.1"

ogts-backend = { path = "../backend" }
ogts-common = { path = "../common" }

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
